--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@eulerstream/euler-api-sdk": "^0.1.7",
     "express": "^5.2.1"
   },
   "devDependencies": {
