--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "manage-alerts": "tsx src/scripts/manage-alerts.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
   "type": "commonjs",
   "dependencies": {
     "@eulerstream/euler-api-sdk": "^0.1.7",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
